Resolve redaction view from going off page with no text wrap.
Added css to address <pre> tags and word wrap. Also noticed that
the output was surrounded by paragraph tags where the style should
have been applied to the <div> tag like the rest of the views.

Tested in development without any problems.

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -2304,6 +2304,11 @@ a.button {
     font-size: 13px;
     background: #e8e8e8;
     padding: 2px 3px;
+    white-space: pre-wrap;       /* css-3 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
 
     code {
       padding: 0;
